# minecraft-protocol

./: .gitmodules  .travis.yml  Cargo.toml  README.md  generate.sh
protocol/: Cargo.toml
protocol-derive/: Cargo.toml
protocol-derive/src/: error.rs  lib.rs  parse.rs
protocol-derive/src/render/: decoder.rs  encoder.rs
protocol-derive/tests/: bitfield_abilities.rs  bitfield_half.rs  bitfield_position.rs
protocol-generator/: Cargo.toml
protocol-generator/src/: backend.rs  data.rs  error.rs  frontend.rs  main.rs  mappings.rs  templates.rs  transformer.rs  transformers.rs
protocol-generator/src/data/: input.rs  output.rs
protocol-generator/templates/: packet_enum.hbs  packet_imports.hbs  packet_struct.hbs  packets_structs.hbs  protocol_enum.hbs  protocol_header.hbs  protocol_imports.hbs  protocol_module.hbs  protocol_state_enum.hbs  protocol_structs.hbs  protocol_versions_module.hbs
protocol-generator/test/: packet_struct.txt
protocol/src/: chat.rs  decoder.rs  encoder.rs  error.rs  game.rs  lib.rs  login.rs  packet.rs  status.rs
protocol/src/data/: chat.rs  game.rs  mod.rs  server_status.rs
protocol/src/packet/: game.rs  handshake.rs  login.rs  mod.rs  status.rs
protocol/src/version/: mod.rs
protocol/src/version/v1_14_4/: game.rs  handshake.rs  login.rs  mod.rs  status.rs
protocol/src/version/v_15w40b/: game.rs
protocol/src/version/v_16w20a/: game.rs  login.rs
protocol/src/version/v_16w35a/: game.rs
protocol/src/version/v_17w15a/: game.rs
protocol/src/version/v_17w18b/: game.rs
protocol/src/version/v_17w50a/: game.rs
protocol/src/version/v_1_10_pre1/: game.rs
protocol/src/version/v_1_11/: game.rs
protocol/src/version/v_1_12/: game.rs
protocol/src/version/v_1_12_1/: game.rs
protocol/src/version/v_1_12_2/: game.rs
protocol/src/version/v_1_12_pre4/: game.rs
protocol/src/version/v_1_13/: game.rs
protocol/src/version/v_1_13_2/: handshake.rs  login.rs
protocol/src/version/v_1_13_2_pre2/: game.rs
protocol/src/version/v_1_14/: game.rs
protocol/src/version/v_1_14_3/: game.rs
protocol/src/version/v_1_14_4/: game.rs
protocol/src/version/v_1_15/: status.rs
protocol/src/version/v_1_15_1/: mod.rs
protocol/src/version/v_1_15_2/: game.rs
protocol/src/version/v_1_16_1/: game.rs  login.rs
protocol/src/version/v_1_16_2/: game.rs
protocol/src/version/v_1_8/: game.rs
protocol/src/version/v_1_9/: game.rs
protocol/src/version/v_1_9_2/: game.rs
protocol/src/version/v_1_9_4/: game.rs
protocol/src/version/v_20w13b/: game.rs
protocol/test/chat/: click_suggest_command.json  hex_color.json  hover_show_entity.json  hover_show_item.json  keybind_jump.json  text_hello_world.json
src/: chat.rs  game.rs  lib.rs  login.rs  status.rs
test/chat/: click_change_page.json  click_open_url.json  click_run_command.json  hover_show_text.json  translate_opped_steve.json
