[package]
name = "minecraft-protocol-derive"
version = "0.0.0"
authors = ["vagola <vladislavs.golubs@yandex.ru>"]
edition = "2018"
description = "Derive macro for reading and writing Minecraft packets"
publish = false

[lib]
proc-macro = true

[dependencies]
# Versions match serde crate to reduce compile time.
proc-macro2 = "0.4.30"
syn = "0.15.44"
quote = "0.6.13"
